fixing dark mode, fixing jurnal detail

--- a/src/styles/sass/components/_dark-mode.sass
+++ b/src/styles/sass/components/_dark-mode.sass
@@ -54,3 +54,11 @@
             .blog
                 .blog-card
                     color: white
+        #blog-detail
+            .breadcrumb
+                ul
+                    li
+                        a
+                            color: white
+                        a:hover
+                            color: #51E3D4
