--- a/src/styles/sass/pages/_journal-detail.sass
+++ b/src/styles/sass/pages/_journal-detail.sass
@@ -10,6 +10,11 @@
             padding: 0
             li
                 display: inline-block
+                a
+                    text-decoration: none
+                    color: black
+                a:hover
+                    color: #474E84
             li:before
                 content: '/'
                 padding-right: 10px
@@ -52,14 +57,26 @@
         font-weight: 300
         font-size: 18px
         img
-            margin-left: auto
-            margin-right: auto
             display: block
+            margin: 20px auto
+        li
+            a
+                img
+                    margin: 20px auto
+                    display: block
         figure
             margin-left: auto
             margin-right: auto
             figcaption
                 font-size: 14px
+        pre
+            font-size: 16px
+            width: 100%
+            overflow-y: scroll
+            padding: 10px 20px
+            border: 1px solid #dedede
+            border-radius: 5px
+            margin: 20px 0
 
 
 @include respond(phone)
